0.51 ????-??-??
-feature: normalize() now decodes unreserved chars and normalizes + to %20 (RFC 3986, 6.2.2.2)
-feature: TO_JSON() added as alias of to_string()
-miscellaneous minor efficiency/speed improvements

0.50 2021-08-03
-behavior: correct uri_split and uri to treat leading double-slash in input
 string as the beginning of the authority section, as URI and URI::Split do,
 instead of as the beginning of the path with ad leading empty segment
-feature: new subroutine html_url, which scrubs whitespace permitted by URLs
 read from HTML documents (tab, newline, carriage return) and replaces
 backslashes with forward slashes (also allowed in HTML, I'm afraid)

0.49 2019-08-02
-make 0.48_01 official

0.48_01 2019-07-31
-bugfix: calling query_keyset with a zero-length key could result in a
 malformed query string
-bugfix: calling set_param with an array containing a zero-length string could
 result in a malformed query string

0.48 2019-07-09
-make 0.47_01 official

0.47_01 2019-07-06
-bugfix: fix dynamically set $VERSION in URI::Fast::IRI

0.47 2019-07-05
-bugfix: escape_tree and unescape_tree die when called with non-reference
 argument
-workaround: an older release had a versioned URI::Fast::IRI, requiring that it
 remains versioned to keep the cpan indexer happy; this change works around
 that by linking it to $URI::Fast::VERSION.
-bugfix: path([]) caused infinite loop, because why would av_top_index return 0
 for an empty array anyway?

0.46 2019-01-03
-feature: new routines escape_tree() and unescape_tree() added

0.45 2018-12-10
-feature: documented and exposed lower level method split_path, added
 split_path_compat which replicates the behavior of URI->path_segments as a
 getter

0.44 2018-12-05
-bugfix: removed hard-coded references to class name which were preventing expected
 behavior when subclassing URI::Fast

0.43 2018-11-27
-new feature: append() method serially constructs a URI from fragments of path,
 query, and fragment (credit: merlyn)
